# so_rpi2040

./: .gitignore  CMakeLists.txt  sube_git.sh  sube_pico.sh
plantilla/: CMakeLists.txt
src/: bios.S  bios.h  main.c
